--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,7 @@
                           <input type="text" class="form-control" id="user" placeholder="User">
                         </div>
                     </div>
+                    <!-- /.form-group -->
 
                     <div class="form-group">
                         <label class="sr-only" for="password">User</label>
@@ -41,6 +42,7 @@
                           <input type="text" class="form-control" id="password" placeholder="Password">
                         </div>
                     </div>
+                    <!-- /.form-group -->
 
                     <button type="button" class="btn btn-lg btn-green btn-block">SIGN IN</button>
 
