--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -25,19 +25,46 @@
             <span class="text-muted">Toggleable via the navbar brand.</span>
         </div>
     </div>
+    <!-- /.collapse -->
 
     <nav class="navbar navbar-fixed-top navbar-full navbar-dark bg-inverse hidden-md-up">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#side-menu-toogle">
             &#9776;
         </button>
     </nav>
+    <!-- /.navbar -->
 
     <div class="side-menu hidden-sm-down">
+
+        <div class="text-xs-center">
+            <img src="http://www.myiconfinder.com/uploads/iconsets/624dc72b6deef6abddf29031c1ac7224.png" class="side-menu-icon">
+        </div>
+        
+
+        <div class="side-menu-header">
+            MAIN NAVIGATION
+        </div>
+        <!-- /.side-menu-header -->
+
+        <div class="side-menu-item active">
+            <span class="fa fa-user side-menu-item-icon"></span>
+            <span>Projects</span>
+        </div>
+        <!-- /.side-menu-item -->
+
+        <div class="side-menu-item">
+            <span class="fa fa-user side-menu-item-icon"></span>
+            <span>Log Out</span>
+        </div>
+        <!-- /.side-menu-item -->
+
     </div>
+    <!-- /.side-menu -->
 
     <div class="content">
         
     </div>
+    <!-- /.content -->
 
     <!-- jQuery first, then Theter and finally Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
