--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 </head>
 <body class="blurred-background">
     <div class="container">
-        <div class="row text-center">
+        <div class="row text-xs-center">
             <div class="login-container">
                 <div class="login-decoration"></div>
                 
