--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,6 +14,12 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
+    <!-- MapBox -->
+    <link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
+
+    <!-- Leaflet -->
+    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.3/leaflet.draw.css' rel='stylesheet' />
+
     <!-- Custom CSS -->
     <link rel='stylesheet' href='/css/custom.css' />
 </head>
@@ -83,17 +89,17 @@
             <!-- /.custom-breadcrumb -->
         </h4>
 
-        <div class="new-project-form margin-top-3">
+        <div class="new-project-form">
             <div class="form-group row">
-                <label for="input-name" class="col-sm-2 form-control-label">Name</label>
+                <label class="col-sm-2 form-control-label">Name</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="input-name" placeholder="Project name">
                 </div>
             </div>
-            <!-- Project name -->
+            <!-- /Project name -->
 
-            <div class="form-group row">
-                <label for="input-name" class="col-sm-2 form-control-label">Type of Stream</label>
+            <div class="form-group row hidden-xs-up">
+                <label class="col-sm-2">Type of Stream</label>
                 <div class="col-sm-10">
                     <div class="radio">
                         <label>
@@ -107,7 +113,7 @@
                             User Stream
                         </label>
                     </div>
-                    <div class="radio disabled">
+                    <div class="radio">
                         <label>
                             <input type="radio" name="streamRadios" id="radio-site-stream" value="Site Stream">
                             Site Stream
@@ -115,7 +121,61 @@
                     </div>
                 </div>
             </div>
+            <!-- /Type of Stream -->
+
+            <div class="form-group row hidden-xs-up">
+                <label class="col-sm-2">Endpoint</label>
+                <div class="col-sm-10">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="endpoint" id="endpoint-filter" value="Filter" checked>
+                            Filter
+                        </label>
+                    </div>
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="endpoint" id="endpoint-sample" value="Sample">
+                            Sample
+                        </label>
+                    </div>
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="endpoint" id="endpoint-firehose" value="Firehose">
+                            Firehose
+                      </label>
+                    </div>
+                </div>
+            </div>
+            <!-- /Endpoint -->
+
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label">Follow</label>
+                <div class="col-sm-10">
+                    <textarea id="textarea-follow" class="form-control" rows="3" placeholder="Write up to 5,000 follow userids (use comma-separated values)"></textarea>
+                </div>
+            </div>
+            <!-- /Follow -->
+
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label">Track</label>
+                <div class="col-sm-10">
+                    <textarea id="textarea-track" class="form-control" rows="3" placeholder="Write up to 400 track keywords (use comma-separated values)"></textarea>
+                </div>
+            </div>
+            <!-- /Track -->
+
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label">
+                    Location
+                    <span class="fa fa-question-circle" data-toggle="tooltip" title="Clic on the black square icon inside the map and drag and drop to draw a rectangle"></span>
+                </label>
+                <div class="col-sm-10">
+                    <div id="map"></div>
+                </div>
+            </div>
+            <!-- /Location -->
         </div>
+        <!-- /.new-project-form -->
     </div>
     <!-- /.content -->
 
@@ -200,10 +260,81 @@
     <script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
 
+    <!-- Mapbox -->
+    <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
+
+    <!-- Leaftlet -->
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.3/leaflet.draw.js'></script>
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-geodesy/v0.1.0/leaflet-geodesy.js'></script>
+
+
     <!-- Custom Javascript -->
     <script type="text/javascript">
+
+        var lat1, long1, lat2, long2;
+
+        function loadMap(){
+            // Load initial map and center it at UNICAMP
+            L.mapbox.accessToken = 'pk.eyJ1IjoiamJlbGVubyIsImEiOiJRbGhXRkhVIn0.h2cvX1dQMRnGDT3OBppm3A';
+            var map = L.mapbox.map('map', 'mapbox.streets').setView([-22.8171043, -47.069731], 5);
+
+            // Add a feature group
+            var featureGroup = L.featureGroup().addTo(map);
+
+            // Enable the kind of graphic you want allow users to draw
+            var drawControl = new L.Control.Draw({
+              edit: {
+                featureGroup: featureGroup
+                },
+                draw: {
+                    polygon: false,
+                    polyline: false,
+                    rectangle: true,
+                    circle: false,
+                    marker: false
+                }
+            }).addTo(map);
+
+            // Set listeners to create and update the polygon(rectangle) area
+            map.on('draw:created', showPolygonArea);
+            map.on('draw:edited', showPolygonAreaEdited);
+
+            // Re-draw the rectangle in the map
+            function showPolygonAreaEdited(e) {
+                e.layers.eachLayer(function(layer) {
+                    showPolygonArea({ layer: layer });
+                });
+            }
+
+            // Draw the rectangle in the map
+            function showPolygonArea(e) {
+                featureGroup.clearLayers();
+                featureGroup.addLayer(e.layer);
+                e.layer.bindPopup((LGeo.area(e.layer) / 1000000).toFixed(2) + ' km<sup>2</sup>');
+                e.layer.openPopup();
+
+                // I did this shit by myself, because I didn't found so much
+                // information in the documentation, so I read the code of
+                // leaflet-geodesy and found some interesting things just 
+                // when printing console.log(e.layer.toGeoJSON());
+                // There's an array of coordinates inside geometry that contains
+                // in this case 5 arrays with (lat, long) information, but
+                // as I'm working with a rectangle the first and the final point
+                // are the same, but I'm going to work just with the first and the
+                // third value, because Twitter Streaming API just require that
+                lat1 = e.layer.toGeoJSON().geometry.coordinates[0][0][0];
+                long1 = e.layer.toGeoJSON().geometry.coordinates[0][0][1];
+                lat2 = e.layer.toGeoJSON().geometry.coordinates[0][2][0];
+                long2 = e.layer.toGeoJSON().geometry.coordinates[0][2][1];
+            }
+        }
+
         $(function () {
-          $('[data-toggle="tooltip"]').tooltip()
+            // Activate tooltips
+            $('[data-toggle="tooltip"]').tooltip();
+
+            // Load map
+            loadMap();
         })
     </script>
 </body>
