--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -174,6 +174,61 @@
                 </div>
             </div>
             <!-- /Location -->
+
+            <div class="form-group row hidden-xs-up">
+                <label class="col-sm-2 form-control-label">Delimited</label>
+                <div class="col-sm-10">
+                    <select id="select-delimited" class="form-control form-control-lg">
+                        <option value="NULL">NULL</option>
+                        <option value="length">length</option>
+                    </select>
+                </div>
+            </div>
+            <!-- /Delimited -->
+
+            <div class="form-group row hidden-xs-up">
+                <label class="col-sm-2 form-control-label">Stall Warnings</label>
+                <div class="col-sm-10">
+                    <select id="select-stall-warnings" class="form-control form-control-lg">
+                        <option value="false">FALSE</option>
+                        <option value="true">TRUE</option>
+                    </select>
+                </div>
+            </div>
+            <!-- /Stall Warnings -->
+
+            <div class="form-group row hidden-xs-up">
+                <label class="col-sm-2 form-control-label">Filter Level</label>
+                <div class="col-sm-10">
+                    <select id="select-filter-level" class="form-control form-control-lg">
+                        <option value="none">none</option>
+                        <option value="low">low</option>
+                        <option value="medium">medium</option>
+                    </select>
+                </div>
+            </div>
+            <!-- /Filter Level -->
+
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label">Languages</label>
+                <div class="col-sm-10">
+                    <textarea id="textarea-language" class="form-control" rows="3" placeholder="Write comma-separated values of languages in the format requiered by Twitter (en, pt, es, en-US, ...)"></textarea>
+                </div>
+            </div>
+            <!-- /Language -->
+
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label">Count</label>
+                <div class="col-sm-10">
+                    <input type="number" class="form-control" id="input-count" placeholder="Number of rows in the stream data requiered">
+                </div>
+            </div>
+            <!-- /Count -->
+
+            <div class="text-xs-center margin-top-3">
+                <button class="btn btn-standard btn-green">SAVE</button>
+            </div>
+
         </div>
         <!-- /.new-project-form -->
     </div>
