--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,14 +14,40 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
+    <!-- Custom CSS -->
+    <link rel='stylesheet' href='/css/custom.css' />
+
     <!-- MapBox -->
     <link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
 
     <!-- Leaflet -->
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.3/leaflet.draw.css' rel='stylesheet' />
 
-    <!-- Custom CSS -->
-    <link rel='stylesheet' href='/css/custom.css' />
+    <!-- Angular 2 - Load libraries -->
+    <!-- IE required polyfills, in this exact order -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.0/es6-shim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.24/system-polyfills.js"></script>
+    <script src="https://npmcdn.com/angular2@2.0.0-beta.9/es6/dev/src/testing/shims_for_IE.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.11/angular2-polyfills.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.24/system.src.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.11/Rx.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.11/angular2.dev.js"></script>
+
+    <!-- Angular 2 - Configure SystemJS -->
+    <script>
+        System.config({
+            packages: {        
+                app: {
+                    format: 'register',
+                    defaultExtension: 'js'
+                }
+            }
+        });
+        System.import('assets/js/main')
+        .then(null, console.error.bind(console));
+  </script>
+
 </head>
 <body>
 
@@ -228,7 +254,7 @@
             <div class="form-group row">
                 <label class="col-sm-2 form-control-label">Start Date</label>
                 <div class="col-sm-10">
-                    <input type="date" class="form-control" id="input-start-date" placeholder="dd/mm/yyyy hh:ii:ss">
+                    <input type="text" class="form-control" id="input-start-date" placeholder="dd/mm/yyyy hh:ii:ss">
                 </div>
             </div>
             <!-- /Start Date -->
@@ -236,7 +262,7 @@
             <div class="form-group row">
                 <label class="col-sm-2 form-control-label">Finish Date</label>
                 <div class="col-sm-10">
-                    <input type="date" class="form-control" id="input-finish-date" placeholder="dd/mm/yyyy hh:ii:ss">
+                    <input type="text" class="form-control" id="input-finish-date" placeholder="dd/mm/yyyy hh:ii:ss">
                 </div>
             </div>
             <!-- /Finish Date -->
@@ -312,6 +338,9 @@
 
     </div>
     <!-- /.content -->
+
+    <my-app> </my-app>
+    <!-- Test -->
 
     <!-- jQuery first, then Theter and finally Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
