--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -22,297 +22,11 @@
 
     <!-- Leaflet -->
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.3/leaflet.draw.css' rel='stylesheet' />
-
 </head>
 <body>
 
-    <div class="collapse" id="side-menu-toogle">
-        <div class="bg-inverse p-a-1">
-            <h4>Collapsed content</h4>
-            <span class="text-muted">Toggleable via the navbar brand.</span>
-        </div>
-    </div>
-    <!-- /.collapse -->
-
-    <nav class="navbar navbar-fixed-top navbar-full navbar-dark bg-inverse hidden-md-up">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#side-menu-toogle">
-            &#9776;
-        </button>
-    </nav>
-    <!-- /.navbar -->
-
-    <div class="side-menu hidden-sm-down">
-
-        <div class="text-xs-center">
-            <img src="http://www.myiconfinder.com/uploads/iconsets/624dc72b6deef6abddf29031c1ac7224.png" class="side-menu-icon">
-        </div>
-        <!-- /.text-xs-center -->
-        
-        <div class="margin-sides-075">
-            <button type="button" class="btn btn-sm btn-green btn-block">NEW PROJECT</button>
-        </div>
-        <!-- /.margin-025 -->
-
-        <div class="side-menu-header">
-            MAIN NAVIGATION
-        </div>
-        <!-- /.side-menu-header -->
-
-        <div class="side-menu-item active">
-            <span class="fa fa-database side-menu-item-icon"></span>
-            <span>Projects</span>
-        </div>
-        <!-- /.side-menu-item -->
-
-        <div class="side-menu-item">
-            <span class="fa fa-power-off side-menu-item-icon"></span>
-            <span>Log Out</span>
-        </div>
-        <!-- /.side-menu-item -->
-
-    </div>
-    <!-- /.side-menu -->
-
-    <div class="content">
-        <h4>
-            <span>New Project</span>
-            <span class="custom-breadcrumb">
-                <span>
-                    <span class="fa fa-database"></span>
-                    <span>Projects</span>    
-                </span>
-                <span class="no-pointer"> > </span>
-                <span>
-                    <span class="fa fa-plus"></span>
-                    <span>New Project</span>    
-                </span>
-            </span>
-            <!-- /.custom-breadcrumb -->
-        </h4>
-
-        <div class="new-project-form">
-            <div class="form-group row">
-                <label class="col-sm-2 form-control-label">Name</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="input-name" placeholder="Project name">
-                </div>
-            </div>
-            <!-- /Project name -->
-
-            <div class="form-group row hidden-xs-up">
-                <label class="col-sm-2">Type of Stream</label>
-                <div class="col-sm-10">
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="streamRadios" id="radio-public-stream" value="Public streams" checked>
-                            Public streams
-                        </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="streamRadios" id="radio-user-stream" value="User Stream">
-                            User Stream
-                        </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="streamRadios" id="radio-site-stream" value="Site Stream">
-                            Site Stream
-                      </label>
-                    </div>
-                </div>
-            </div>
-            <!-- /Type of Stream -->
-
-            <div class="form-group row hidden-xs-up">
-                <label class="col-sm-2">Endpoint</label>
-                <div class="col-sm-10">
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="endpoint" id="endpoint-filter" value="Filter" checked>
-                            Filter
-                        </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="endpoint" id="endpoint-sample" value="Sample">
-                            Sample
-                        </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="endpoint" id="endpoint-firehose" value="Firehose">
-                            Firehose
-                      </label>
-                    </div>
-                </div>
-            </div>
-            <!-- /Endpoint -->
-
-            <div class="form-group row">
-                <label class="col-sm-2 form-control-label">Follow</label>
-                <div class="col-sm-10">
-                    <textarea id="textarea-follow" class="form-control" rows="3" placeholder="Write up to 5,000 follow userids (use comma-separated values)"></textarea>
-                </div>
-            </div>
-            <!-- /Follow -->
-
-            <div class="form-group row">
-                <label class="col-sm-2 form-control-label">Track</label>
-                <div class="col-sm-10">
-                    <textarea id="textarea-track" class="form-control" rows="3" placeholder="Write up to 400 track keywords (use comma-separated values)"></textarea>
-                </div>
-            </div>
-            <!-- /Track -->
-
-            <div class="form-group row">
-                <label class="col-sm-2 form-control-label">
-                    Location
-                    <span class="fa fa-question-circle" data-toggle="tooltip" title="Clic on the black square icon inside the map and drag and drop to draw a rectangle"></span>
-                </label>
-                <div class="col-sm-10">
-                    <div id="map"></div>
-                </div>
-            </div>
-            <!-- /Location -->
-
-            <div class="form-group row hidden-xs-up">
-                <label class="col-sm-2 form-control-label">Delimited</label>
-                <div class="col-sm-10">
-                    <select id="select-delimited" class="form-control form-control-lg">
-                        <option value="NULL">NULL</option>
-                        <option value="length">length</option>
-                    </select>
-                </div>
-            </div>
-            <!-- /Delimited -->
-
-            <div class="form-group row hidden-xs-up">
-                <label class="col-sm-2 form-control-label">Stall Warnings</label>
-                <div class="col-sm-10">
-                    <select id="select-stall-warnings" class="form-control form-control-lg">
-                        <option value="false">FALSE</option>
-                        <option value="true">TRUE</option>
-                    </select>
-                </div>
-            </div>
-            <!-- /Stall Warnings -->
-
-            <div class="form-group row hidden-xs-up">
-                <label class="col-sm-2 form-control-label">Filter Level</label>
-                <div class="col-sm-10">
-                    <select id="select-filter-level" class="form-control form-control-lg">
-                        <option value="none">none</option>
-                        <option value="low">low</option>
-                        <option value="medium">medium</option>
-                    </select>
-                </div>
-            </div>
-            <!-- /Filter Level -->
-
-            <div class="form-group row">
-                <label class="col-sm-2 form-control-label">Languages</label>
-                <div class="col-sm-10">
-                    <textarea id="textarea-language" class="form-control" rows="3" placeholder="Write comma-separated values of languages in the format requiered by Twitter (en, pt, es, en-US, ...)"></textarea>
-                </div>
-            </div>
-            <!-- /Language -->
-
-            <div class="form-group row">
-                <label class="col-sm-2 form-control-label">Count</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" id="input-count" placeholder="Number of rows in the stream data requiered">
-                </div>
-            </div>
-            <!-- /Count -->
-
-            <div class="form-group row">
-                <label class="col-sm-2 form-control-label">Start Date</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="input-start-date" placeholder="dd/mm/yyyy hh:ii:ss">
-                </div>
-            </div>
-            <!-- /Start Date -->
-
-            <div class="form-group row">
-                <label class="col-sm-2 form-control-label">Finish Date</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="input-finish-date" placeholder="dd/mm/yyyy hh:ii:ss">
-                </div>
-            </div>
-            <!-- /Finish Date -->
-
-            <div class="text-xs-center margin-top-3">
-                <button class="btn btn-standard btn-green">SAVE</button>
-            </div>
-
-        </div>
-        <!-- /.new-project-form -->
-    </div>
-    <!-- /.content -->
-
-    <div class="content hidden-xs-up">
-        <h4>
-            <span>Projects</span>
-            <span class="custom-breadcrumb">
-                <span>
-                    <span class="fa fa-database"></span>
-                    <span>Projects</span>    
-                </span>
-            </span>
-            <!-- /.custom-breadcrumb -->
-        </h4>
-
-        <table class="table table-striped margin-top-3">
-            <thead class="thead-inverse">
-                <tr>
-                    <th>ID</th>
-                    <th>Project Name</th>
-                    <th>Options</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td class="gray-link">Semantic reasearch over twitter data</td>
-                    <td>
-                        <button type="button" class="btn btn-success-outline margin-top-025" data-toggle="tooltip" title="View">
-                            <span class="fa fa-eye"></span>
-                        </button>
-                        <button type="button" class="btn btn-danger-outline margin-top-025" data-toggle="tooltip" title="Delete">
-                            <span class="fa fa-times"></span>
-                        </button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td class="gray-link">Semantic reasearch over twitter data</td>
-                    <td>
-                        <button type="button" class="btn btn-success-outline margin-top-025" data-toggle="tooltip" title="View">
-                            <span class="fa fa-eye"></span>
-                        </button>
-                        <button type="button" class="btn btn-danger-outline margin-top-025" data-toggle="tooltip" title="Delete">
-                            <span class="fa fa-times"></span>
-                        </button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td class="gray-link">Semantic reasearch over twitter data</td>
-                    <td>
-                        <button type="button" class="btn btn-success-outline margin-top-025" data-toggle="tooltip" title="View">
-                            <span class="fa fa-eye"></span>
-                        </button>
-                        <button type="button" class="btn btn-danger-outline margin-top-025" data-toggle="tooltip" title="Delete">
-                            <span class="fa fa-times"></span>
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>        
-
-    </div>
-    <!-- /.content -->
+    <div id="wrapper"></div>
+    <!-- #wrapper -->
 
     <!-- jQuery first, then Theter and finally Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -326,6 +40,15 @@
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.3/leaflet.draw.js'></script>
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-geodesy/v0.1.0/leaflet-geodesy.js'></script>
 
+    <!-- The core React library -->
+    <script src="https://fb.me/react-15.0.1.js"></script>
+    <!-- The ReactDOM Library -->
+    <script src="https://fb.me/react-dom-15.0.1.js"></script>
+    <!-- Browser -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+
+    <!-- React View Loader -->
+    <script src="/js/dashboard.js"></script>
 
     <!-- Custom Javascript -->
     <script type="text/javascript">
